[metadata]
name = Mopidy-Podcast
version = 3.0.1
url = https://github.com/tkem/mopidy-podcast
author = Thomas Kemmer
author_email = tkemmer@computer.org
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for browsing and playing podcasts
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    cachetools >= 2.0
    setuptools
    uritools >= 1.0


[options.extras_require]
docs =
    sphinx
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
release =
    twine
    wheel
test =
    pytest
    pytest-cov
dev =
    %(docs)s
    %(lint)s
    %(release)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    podcast = mopidy_podcast:Extension


[flake8]
application-import-names = mopidy_podcast, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
